@@ -202,6 +202,7 @@ src/agent/subagents/netware/Makefile.am -text
 src/agent/subagents/netware/Makefile.nw -text
 src/agent/subagents/netware/netware.cpp -text
 src/agent/subagents/netware/netware.def -text
+src/agent/subagents/netware/nwagent.h -text
 src/agent/subagents/ping/Makefile.am -text
 src/agent/subagents/ping/ping.cpp -text
 src/agent/subagents/ping/ping.dsp -text
